[tool.poetry]
name = "nacos"
version = "0.1.0"
description = "A python nacos sdk package supporting Nacos 2.X"
authors = ["Jedore <jedorefight@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
