[tool.poetry]
name = "nacos"
version = "0.1.0"
description = "A python nacos sdk package supporting Nacos 2.X"
authors = ["Jedore <jedorefight@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.64.1"
netifaces2 = "^0.0.22"
orjson = "^3.10.5"
pyyaml = "^6.0.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
